--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,59 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+## Logs
+# frontend
+frontend/logs
+frontend/*.log
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/pnpm-debug.log*
+frontend/lerna-debug.log*
 
+# backend
+backend/logs
+backend/*.log
+backend/npm-debug.log*
+
+## Runtime data
+backend/pids
+backend/*.pid
+backend/*.seed
+
+## Node modules
 frontend/node_modules
 backend/node_modules
-backend/.env
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+## Environment
+frontend/.env
+backend/.env
+
+## Compiled binary addons
+backend/build/
+backend/dist/
+
+## Misc
+backend/.DS_Store
+backend/.env.local
+backend/.env.development.local
+backend/.env.test.local
+backend/.env.production.local
+
+## Editor directories and files
+frontend/.vscode/*
+frontend/.vscode/extensions.json
+frontend/.idea
+frontend/.DS_Store
+frontend/*.suo
+frontend/*.ntvs*
+frontend/*.njsproj
+frontend/*.sln
+frontend/*.sw?
+
+backend/.vscode/*
+backend/.vscode/extensions.json
+backend/.idea
+backend/.DS_Store
+backend/*.suo
+backend/*.ntvs*
